# healthcare-report-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  LICENSE.md  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: main.html  main.py
api/src/: config.html  config.py  schemas.html  schemas.py
api/src/agents/: deps.html  deps.py  orchestrator.html  orchestrator.py  prompts.html  prompts.py
api/src/db/: connection.py  duckdb_connection.html  duckdb_connection.py  minio_connection.html  minio_connection.py
api/src/middleware/: observability.html  observability.py
api/src/routers/: agent.html  agent.py
api/src/services/: ingest.html  ingest.py  manage_plots.html  manage_plots.py  telemetry.html  telemetry.py
api/src/tools/: plot.html  plot.py  schemas.html  schemas.py  search.html  search.py  stats.html  stats.py
api/tests/: conftest.html  conftest.py
api/tests/integration/: test_agent.html  test_agent.py
api/tests/unit/: test_securiry.py  test_security.html
docs/: index.md
docs/api/src/: config.md  schemas.md
docs/api/src/agents/: deps.md  orchestrator.md  prompts.md
docs/api/src/db/: duckdb_connection.md  minio_connection.md
docs/api/src/middleware/: observability.md
docs/api/src/routers/: agent.md
docs/api/src/services/: ingest.md  manage_plots.md  telemetry.md
docs/api/src/tools/: plot.md  schemas.md  (+2 more)
docs/api/tests/: conftest.md
frontend/: app.py
notebooks/: 1.0-eda.ipynb  2.0-agent-prototyping.ipynb
(+2 files in other folders)
