[project]
name = "custom-report-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.24",
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pre-commit>=4.5.1",
    "pyarrow>=22.0.0",
    "pydantic-ai>=1.40.0",
    "pydantic-ai-guardrails>=0.2.1",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tavily>=1.1.0",
]
